--- a/src/posts/服务器资源预警平台.md
+++ b/src/posts/服务器资源预警平台.md
@@ -1,9 +1,9 @@
 ---
+title: 服务器资源管理平台
 icon: pen-to-square
-date: 2022-01-11
+date: 2025-07-08
 category:
-  - 水果
-  - 草莓
+  - 运维
 tag:
   - 红
   - 小
